# xyzrenderGUI

./: .gitignore  LICENSE  README.md  README_zh_CN.md  __init__.py  config.py  main.py  parsing.py  pyproject.toml  requirements.txt  viewer.py  workers.py
src/xyzrender_gui/: config.py  dialogs.py  i18n.py  main.py  parsing.py  viewer.py  workers.py
src/xyzrender_gui/tabs/: __init__.py  charge_tab.py  cube_tab.py  esp_tab.py  igmh_tab.py  mo_tab.py  structure_tab.py
tabs/: charge_tab.py  cube_tab.py  esp_tab.py  igmh_tab.py  mo_tab.py  structure_tab.py
tests/: test_package.py
